framec_tests/language_specific/python/v3_mir/positive/forward_parent.frm
@target python

system S {
    machine:
        $A => $P {
            e() {
                => $^
            }
        }
        $P { }
}
