framec_tests/language_specific/python/v3_mir/negative/forward_trailing_tokens.frm
@target python

system S {
    machine:
        $A {
            e() {
                => $^ extra
            }
        }
}

